# dotjs-2025

./: .dir-locals.el  .gitignore  CLAUDE.md  Makefile  README.org  SETUP.org  pyproject.toml  requirements.txt  setup.sh  utils.py
cleanup/: sarah-drasner-the-wind-and-the-waves-the-formation-of-framework-waves-from-the-epicenter.org
lisp/: config.el  dotjs-init.el  export-all-org-files.el  generate-templates.el  org-capture-templates.el
notes/lightning-talks/: abbey-perini-coding-and-adhd-where-we-excel.org  abbeyperini-codingandadhdwhereweexcel.org  antoine-caron-supercharge-web-performance-with-shared-dictionaries-the-next-frontier-in-http-compression.org  antoinecaron-superchargewebperformancewithshareddictionariesthenextfrontierinhttpcompression.org  charly-poly-durable-executions-for-mortals.org  charlypoly-durableexecutionsformortals.org  joyce-lin-code-in-the-physical-world.org  joycelin-codeinthephysicalworld.org  vadim-smirnov-recreating-windows-media-player-art-with-web-midi-api.org  vadimsmirnov-recreatingwindowsmediaplayerartwithwebmidiapi.org
resources/bibliography/: references.bib
scripts/: clean.sh  detangle.sh  export-html.sh  export-pdf.sh  generate-templates.sh  lint-elisp.sh  lint-org.sh  lint-python.sh  lint-shell.sh  setup-python.sh  setup.sh  tangle.sh  test.sh
talks/afternoon-sessions/: angie-jones-modern-day-mashups-how-ai-agents-are-reviving-the-programmable-web.org  angiejones-moderndaymashupshowaiagentsarerevivingtheprogrammableweb.org  eduardo-san-martin-morote-from-terrible-to-terrific-frontend-routers.org  (+5 more)
(+8 files in other folders)
