[project]
name = "dotjs-2025"
version = "0.1.0"
description = "Notes and code from dotJS 2025 conference"
authors = [
    {name = "Aidan Pace", email = "apace@defrecord.com"}
]
readme = "README.org"
requires-python = ">=3.11"
dependencies = []

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"
black = "^23.10.0"
pytest = "^7.4.0"
jupyter = "^1.0.0"
ipython = "^8.16.0"
markdown = "^3.5.0"
pygments = "^2.16.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I"]

[tool.black]
line-length = 88
target-version = ["py311"]
